# Spresense-CycleComputer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  Spresense-CycleComputer.ino  cyclecomputer.ino
.cache/clangd/index/: Config.h.569D7A3774C6A9DD.idx  TripComputer.h.00EF952C06695277.idx
.github/workflows/: ci.yml
cyclecomputer/.github/workflows/: ci.yml
cyclecomputer/src/drivers/: Button.h  GPSWrapper.cpp  GPSWrapper.h  I2CLCDDriver.h  LCDDriver.h  SevenSegDriver.h
cyclecomputer/src/interfaces/: IDisplay.h
cyclecomputer/src/system/: ModeManager.h  TripComputer.h  Utils.h
docs/: requirements.md
docs/drivers/: SevenSegDriver.cpp
src/: App.cpp  App.h  Config.h  CycleComputer.h
src/domain/: AutoSaver.h  Clock.h  DataStore.h  NavData.h  Odometer.h  Speedometer.h  Stopwatch.h  Trip.h
src/drivers/: Button.cpp  Button.h  ButtonDriver.cpp  ButtonDriver.h  GPSWrapper.cpp  GPSWrapper.h  Gnss.h  I2CLCDDriver.cpp  I2CLCDDriver.h  LCDDriver.cpp  LCDDriver.h  OLED.h  OLEDDriver.cpp  OLEDDriver.h  SevenSegDriver.cpp  SevenSegDriver.h
src/hal/interfaces/: IDisplay.h  IGnssProvider.h  IInputProvider.h
src/hardware/: Button.h  Gnss.h  OLED.h  VoltageSensor.h
src/interfaces/: IDisplay.h
src/logic/: Clock.h  DataStore.h  Trip.h  VoltageMonitor.h
src/system/: Clock.h  CycleComputer.cpp  CycleComputer.h  DisplayData.cpp  DisplayData.h  GPSManager.cpp  GPSManager.h  GPSWrapper.cpp  GPSWrapper.h  Input.h  InputEvent.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Mode.h  ModeManager.cpp  ModeManager.h  Odometer.h  PowerManager.cpp  PowerManager.h  Speedometer.h  Stopwatch.h  Trip.h  TripComputer.cpp  TripComputer.h  TripManager.cpp  TripManager.h  Utils.h
src/ui/: ConcreteModes.h  DisplayData.h  Formatter.h  Frame.h  FrameBuilder.h  GraphicsContext.h  Input.h  InputEvent.h  Mode.h  ModeState.h  Renderer.h  UI.h
src2/: App.h  DataStructures.h  Pipeline.h  TripCompute.h
src2/hardware/: OLED.h  VoltageSensor.h
src2/logic/: DataStore.h
src2/ui/: Mode.h  Renderer.h  UI.h
tests/button_debug/: button_debug.ino
tests/host/: App2Test.cpp  AppTest.cpp  Benchmark.cpp  CMakeLists.txt  CalculationErrorTest.cpp  CompatibilityTest.cpp  Config.h  CycleComputerTest.cpp  EquivalenceTest.cpp  HardwareFailureTest.cpp  HardwareTest.cpp  InputManagerTest.cpp  InputTest.cpp  LogicTest.cpp  Makefile  ModeManagerTest.cpp  ModeTest.cpp  NegativeTest.cpp  OLEDTruthTest.cpp  PipelineTest.cpp  PowerLossTest.cpp  SystemIntegrationTest.cpp  TripComputeTest.cpp  TripComputerTest.cpp  TripTest.cpp  TripTestBase.h  UITest.cpp  run_tests
tests/host/.cache/clangd/index/: Arduino.h.1CC7C84B4EE132EB.idx  MockGlobals.cpp.08FCBB3D04251DAA.idx  TripComputerTest.cpp.0F781D9A261A43C3.idx
tests/host/mocks/: Adafruit_GFX.h  Adafruit_SSD1306.h  Arduino.h  Button.h  DisplayLogger.h  EEPROM.h  GNSS.h  Gnss.h  LowPower.h  MockGlobals.cpp  MockLibs.cpp  OLED.h  Wire.h
